  capabilities at runtime instead of in the configure script.

All (GUI):

- support for virtual list control added
- column images in report mode of the list control
- wxFindReplaceDialog added (based on work of Markus Greither)
- wxTextCtrl::SetMaxLength() added (wxMSW/wxGTK)
- polygon support in wxRegion (Klaas Holwerda)

wxHTML:

- new HTML parser with correct parsing of character entities and fixes
  to tags parsing

2.3.1
-----

wxBase:

- Fixes for gcc 3.0
- Fixed new charset detection code
- ODBC Informix fixes (submitted by Roger Gammans)
- Added ODBC date support to wxVariant
- Added wxDir::Traverse
- Added wxSingleInstanceChecker class
- Removed redundant wxDebugContext functions using C++ streams,
  so now standard stream usage should be unnecessary

All (GUI):

- Added wxDbGrid class for displaying ODBC tables
- Added EVT_GRID_EDITOR_CREATED and wxGridEditorCreatedEvent so the
  user code can get access to the edit control when it is created, (to
  push on a custom event handler for example)
- Added wxTextAttr class and SetStyle, SetDefaultStyle and
  GetDefaultStyle methods to wxTextCtrl
- Added wxSingleInstanceChecker
- Improvements to Tex2RTF
- Added Paul and Roger Gammans' grid controls
- Bug in wxDocument::Save logic corrected, whereby Save didn't save when not
  first-time saved
- Fixed memory leak in textcmn.cpp
- Various wxXML enhancements
- Removed wxCLIP_CHILDREN style from wxSplitterWindow
- Fixed memory leak in DoPrint, htmprint.cpp
- Fixed calendar sample bug with using wxCommandEvent::GetInt()
  instead of GetId()
- Added wxDbGrid combining wxODBC classes with wxGrid
- Added more makefiles and project files for contrib hierarchy

wxMSW:

- Fixed wxApp::ProcessMessage so controls don't lose their
  accelerators when the accelerators are redefined elsewhere
- Accelerators consisting of simple keystrokes (without control,
  alt or shift) now work
- Compile fixes for Watcom C++ added
- Compile fixes for Cygwin 1.0 added